--- a/app/src/main/res/layout/fragment_servicio.xml
+++ b/app/src/main/res/layout/fragment_servicio.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp"
-    android:paddingLeft="8dp">
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/textViewNombreServicio"
@@ -16,6 +15,7 @@
         android:layout_marginLeft="16dp"
         android:text="TextView"
         android:textColor="@android:color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewFotoInicio"
         app:layout_constraintStart_toEndOf="@+id/imageViewFotoInicio"
         app:layout_constraintTop_toTopOf="@+id/imageViewFotoInicio"
@@ -25,7 +25,7 @@
         android:id="@+id/textViewDescripcion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="TextView"
@@ -36,10 +36,11 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
 
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imageViewFotoInicio"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_account_circle_black_24dp" />
