--- a/app/src/main/res/layout/new_service_full_dialog.xml
+++ b/app/src/main/res/layout/new_service_full_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -37,25 +36,25 @@
         app:srcCompat="@drawable/ic_close_blue_24dp" />
 
     <ScrollView
-        android:layout_width="413dp"
-        android:layout_height="634dp"
+        android:layout_width="423dp"
+        android:layout_height="635dp"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewclose"
-        tools:layout_editor_absoluteX="-2dp"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvNombreServicio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_margin="5dp"
                 android:padding="10dp"
                 android:paddingLeft="15dp"
                 android:text="Nombre del servicio"
@@ -63,17 +62,16 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
+
             <EditText
                 android:id="@+id/nameService"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:layout_marginBottom="15dp"
                 android:background="@color/colorGrisInput"
                 android:inputType="textAutoComplete"
                 android:paddingTop="10dp"
                 android:textColor="@android:color/black" />
-
 
             <TextView
                 android:id="@+id/tvCliente"
@@ -92,11 +90,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@color/colorGrisInput"
                 android:layout_marginBottom="15dp"
+                android:background="@color/colorGrisInput"
                 android:inputType="text"
                 android:paddingTop="10dp"
                 android:textColor="@android:color/black" />
+
 
 
             <TextView
@@ -116,11 +115,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@color/colorGrisInput"
                 android:layout_marginBottom="15dp"
+                android:background="@color/colorGrisInput"
                 android:inputType="textAutoComplete"
                 android:paddingTop="10dp"
                 android:textColor="@android:color/black" />
+
+
 
             <TextView
                 android:id="@+id/tvNombreEquipo"
@@ -134,13 +135,14 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
+
             <EditText
                 android:id="@+id/etNombreEquipo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@color/colorGrisInput"
                 android:layout_marginBottom="15dp"
+                android:background="@color/colorGrisInput"
                 android:inputType="textAutoComplete"
                 android:paddingTop="10dp"
                 android:textColor="@android:color/black" />
@@ -163,8 +165,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@color/colorGrisInput"
                 android:layout_marginBottom="15dp"
+                android:background="@color/colorGrisInput"
                 android:inputType="text"
                 android:paddingTop="10dp"
                 android:textColor="@android:color/black" />
@@ -193,6 +195,9 @@
                 android:paddingTop="10dp"
                 android:textColor="@android:color/black" />
 
+
+
+
             <TextView
                 android:id="@+id/tvPlanta"
                 android:layout_width="wrap_content"
@@ -215,6 +220,7 @@
                 android:inputType="text"
                 android:paddingTop="10dp"
                 android:textColor="@android:color/black" />
+
 
 
             <TextView
@@ -241,6 +247,7 @@
                 android:textColor="@android:color/black" />
 
 
+
             <TextView
                 android:id="@+id/tvFechaSalida"
                 android:layout_width="wrap_content"
@@ -263,6 +270,8 @@
                 android:inputType="date"
                 android:paddingTop="10dp"
                 android:textColor="@color/colorTextView" />
+
+
 
 
             <TextView
@@ -289,10 +298,12 @@
                 android:textColor="@android:color/black" />
 
 
+
+
             <TextView
                 android:id="@+id/tvHoraSalida"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_marginTop="15dp"
                 android:padding="10dp"
                 android:paddingLeft="15dp"
@@ -304,17 +315,12 @@
             <EditText
                 android:id="@+id/edHoraSalida"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="51dp"
                 android:layout_margin="10dp"
-                android:layout_marginBottom="14dp"
+                android:layout_marginBottom="20dp"
                 android:background="@color/colorGrisInput"
                 android:inputType="time"
-                android:paddingTop="10dp"
                 android:textColor="@android:color/black" />
-
-
-
-
 
 
 
