--- a/app/src/main/res/layout/activity_new_service.xml
+++ b/app/src/main/res/layout/activity_new_service.xml
@@ -2,6 +2,7 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="fill_parent" android:layout_width="fill_parent">
 
 
@@ -9,6 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:animateLayoutChanges="true">
+
 
         <androidx.cardview.widget.CardView
 
@@ -23,9 +25,6 @@
 
             <LinearLayout
 
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -181,6 +180,202 @@
                         android:inputType="time"
                         android:layout_marginBottom="15dp"/>
 
+                    <Button
+                        android:id="@+id/btn_siguiente_one"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button_next"
+                        android:text="Siguiente"
+                        android:drawableRight="@drawable/ic_arrow_forward_white_24dp" />
+
+
+                </LinearLayout>
+
+
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+
+            android:id="@+id/CardView2"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="12dp"
+            app:cardCornerRadius="8dp"
+            android:visibility="gone"
+            app:cardElevation="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="12dp"
+                tools:context=".ui.NewServiceActivity"
+                android:animateLayoutChanges="true">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Registro de servicio"
+                    android:textSize="28sp"
+                    android:fontFamily="sans-serif-black"/>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="11dp"
+                    android:animateLayoutChanges="true">
+
+
+                    <TextView
+                        android:text="Nombre del servicio"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textAutoComplete"
+                        android:layout_marginBottom="15dp"/>
+
+
+
+                    <TextView
+                        android:text="Descripción"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textAutoComplete"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Nombre del equipo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textAutoComplete"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Serial del equipo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Horometro"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:layout_marginBottom="15dp"/>
+
+
+
+                    <TextView
+                        android:text="Fecha de entrada"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+
+
+                    <EditText
+                        android:onClick="onClickServicioEntradaDate"
+                        android:focusable="false"
+                        android:clickable="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="date"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Fecha de salida"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:onClick="onClickServicioSalidaDate"
+                        android:focusable="false"
+                        android:clickable="true"
+                        android:layout_height="wrap_content"
+                        android:inputType="date"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Hora de entrada"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="time"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Hora de salida"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"  />
+
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="time"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <Button
+                        android:id="@+id/btn_siguiente_two"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button_next"
+                        android:text="Siguiente"
+                        android:drawableRight="@drawable/ic_arrow_forward_white_24dp" />
+
+
+
 
                 </LinearLayout>
 
@@ -192,6 +387,191 @@
 
         </androidx.cardview.widget.CardView>
 
+
+        <androidx.cardview.widget.CardView
+
+            android:id="@+id/CardView3"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="12dp"
+            app:cardCornerRadius="8dp"
+            android:visibility="gone"
+            app:cardElevation="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="12dp"
+                tools:context=".ui.NewServiceActivity"
+                android:animateLayoutChanges="true">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Registro de servicio"
+                    android:textSize="28sp"
+                    android:fontFamily="sans-serif-black"/>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="11dp"
+                    android:animateLayoutChanges="true">
+
+
+                    <TextView
+                        android:text="Nombre del servicio"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textAutoComplete"
+                        android:layout_marginBottom="15dp"/>
+
+
+
+                    <TextView
+                        android:text="Descripción"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textAutoComplete"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Nombre del equipo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textAutoComplete"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Serial del equipo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Horometro"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:layout_marginBottom="15dp"/>
+
+
+
+                    <TextView
+                        android:text="Fecha de entrada"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+
+
+
+                    <EditText
+                        android:onClick="onClickServicioEntradaDate"
+                        android:focusable="false"
+                        android:clickable="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="date"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Fecha de salida"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"/>
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:onClick="onClickServicioSalidaDate"
+                        android:focusable="false"
+                        android:clickable="true"
+                        android:layout_height="wrap_content"
+                        android:inputType="date"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Hora de entrada"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:layout_marginTop="8dp"/>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="time"
+                        android:layout_marginBottom="15dp"/>
+
+
+                    <TextView
+                        android:text="Hora de salida"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        />
+
+                   <EditText android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="time"
+                    android:layout_marginBottom="15dp"/>
+
+
+                    <Button
+                        android:id="@+id/btn_siguiente_three"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button_next"
+                        android:text="Siguiente"
+                        android:drawableRight="@drawable/ic_arrow_forward_white_24dp" />
+
+
+                </LinearLayout>
+
+
+
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
 
 
