--- a/app/src/main/res/layout/activity_new_service.xml
+++ b/app/src/main/res/layout/activity_new_service.xml
@@ -223,6 +223,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="time"
+                        android:clickable="true"
+                        android:focusable="false"
                         android:layout_marginBottom="15dp"/>
 
 
@@ -230,12 +232,14 @@
                         android:text="Hora de salida"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        />
+                        android:layout_marginTop="8dp"  />
+
                     <EditText android:id="@+id/horaSalida"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="time"
+                        android:clickable="true"
+                        android:focusable="false"
                         android:layout_marginBottom="15dp"/>
 
 
