--- a/app/src/main/res/layout/activity_new_service.xml
+++ b/app/src/main/res/layout/activity_new_service.xml
@@ -74,7 +74,7 @@
                         android:id="@+id/descripcion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textAutoComplete"
+                        android:inputType="textMultiLine"
                         android:layout_marginBottom="15dp"/>
 
 
